Add Polygon API integration for ticker lookup and market data